--- a/CS_Field_App/package.json
+++ b/CS_Field_App/package.json
@@ -19,7 +19,7 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.28",
+    "expo": "^52.0.30",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
