--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,21 @@
+alembic==1.14.1
+aniso8601==10.0.0
+blinker==1.9.0
+click==8.1.8
 Flask==3.1.0
-Flask_Cors==5.0.0
-Flask_Migrate==4.1.0
-flask_sqlalchemy==3.1.1
+Flask-Cors==5.0.0
+Flask-Migrate==4.1.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==4.11.1
+greenlet==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.5
+Mako==1.3.8
+MarkupSafe==3.0.2
 PyMySQL==1.1.1
+pytz==2025.1
+six==1.17.0
+SQLAlchemy==2.0.37
+typing_extensions==4.12.2
+Werkzeug==3.1.3
