eas build now works. Use preview for builds to work on any android phone.

--- a/CS_Field_App/app.json
+++ b/CS_Field_App/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.apruitt13.CS_Field_App"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "de25d8d7-992b-419c-b9a0-22c99787c7ce"
+      }
     }
   }
 }
