Updated fetch requests to fetch from the deployed db and final css fixes

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 node_modules/
 teacherweb/node_modules/
 backend/migrations/versions/f47c0ff1fcb2_fresh_migration.py
+.env.local
+.env.production
+.env.staging
